tdf#116529: Add calls to SetFieldUnit to switch inch/cm

Change-Id: I96208c01deb75cc9e1a5af7a15d7bc94afd28021